fix layout bugs, lock icon toggles

--- a/src/styles/junk.less
+++ b/src/styles/junk.less
@@ -84,6 +84,9 @@ ot-layout {
   [name=discussion] {
     background-image: url('/images/discussion.png');
   }
+  [locked=false] {
+    background-image: url('/images/discussion-unlocked.png');
+  }
   [name=mute] {
     background-image: url('/images/mute.png');
   }
